# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  configure_template.py  install.bat  pyproject.toml
.github/: commit-instructions.md
hooks/: post-commit
src/python_template/: __main__.py  cli.py  logging_utils.py  main.py
src/python_template/log_management/: log_config.py  log_constants.py
tests/: conftest.py  test_main.py
