[build-system]
requires = ["setuptools>=76.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_template"
description = "A template repository for Python projects."
readme = "README.md"
authors = [{name = "Christopher McMahon", email = "CCarrMcMahon@gmail.com"}]
classifiers = ["Programming Language :: Python :: 3.12"]
version = "1.3.3"
requires-python = ">=3.12.2"
dependencies = ["setuptools>=76.0.0"]

[project.optional-dependencies]
dev = ["pre-commit>=4.1.0"]
lint = ["ruff>=0.11.0"]
test = ["pytest>=8.3.5", "pytest-html>=4.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501", "I", "D2", "D3", "UP", "T10", "LOG", "G"]
ignore = ["D203", "D204", "D213"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
line-ending = "cr-lf"
